# ai-personalities-mcp-server

./: .editorconfig  .gitignore  .prettierignore  .textlintrc.js  .tool-versions  CLAUDE.md  README.md  Taskfile.yaml  ai-personalities.code-workspace  package-lock.json  package.json  prettier.config.mjs  pyproject.toml
.github/: lint.yaml
docs/: personality_design_doc.md
examples/: README.md  load_vectors_to_chromadb.py  multilingual_e5_chromadb.py  multilingual_e5_usage.py  use_saved_vectors.py  vectorize_text_files.py
lib/shinosawa_hiro/: system-prompt.md
personalities/shinosawa_hiro/: system-prompt.md
src/ai_personalities/: __init__.py  __main__.py  config.py  logger.py  mcp_server.py  personality_data_loader.py
