[build-system]
requires = ["hatchling==1.27.0"]
build-backend = "hatchling.build"

[project]
name = "ai-personalities"
version = "1.0.0"
description = "Give personality to AI agents."
authors = [{ name = "kubosho", email = "kubosho@users.noreply.github.com" }]
readme = "README.md"
urls = { Homepage = "https://github.com/kubosho/ai-personalities", Repository = "https://github.com/kubosho/ai-personalities", Issues = "https://github.com/kubosho/ai-personalities/issues" }
requires-python = ">=3.13"
classifiers = ["Private :: Do Not Upload"]
dependencies = ["chromadb==1.0.12", "mcp==1.9.2", "python-frontmatter==1.1.0"]

[dependency-groups]
dev = ["mypy==1.15.0", "ruff==0.11.12"]

[project.scripts]
ai-personalities-mcp = "ai_personalities.mcp_server:main"
ai-personalities-load = "ai_personalities.personality_data_loader:main"

[tool.mypy]
python_version = "3.13"
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.ruff]
line-length = 120
lint.ignore = []
lint.select = ["E", "F", "I", "W"]
target-version = "py313"

[tool.uv]
package = true
